--- a/index.html
+++ b/index.html
@@ -13,7 +13,86 @@
 </head>
 
 <body>
+    <header class="fixed debug">
+        <nav class="d-flex space-b">
+            <div class="h-left debug">
+                LOGO & MENU
+            </div>
+            <div class="h-right debug">
+                SUPPORTO E LOGIN
+            </div>
+        </nav>
+    </header>
 
+    <main>
+        <!-- HERO -->
+        <section class="hero-section debug">
+            <div class="hero container center debug">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+        </section>
+        <!-- PLANS -->
+        <section class="plans small-container center debug">
+            <h2>Trova il paino business che fa per te</h2>
+        </section>
+        <!-- PARTNER -->
+        <section class="partner small-container center debug">
+            <h3>Entra in contatto con un partner Dropbox</h3>
+        </section>
+        <!-- FEATURES -->
+        <section class="features small-container center debug">
+            <h2>Esegui più operazione con Dropbox Business</h2>
+            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+        </section>
+        <!-- CUSTOMERS -->
+        <section class="customers small-container center debug">
+            <div class="box-customers debug">
+                Quadrati con loghi
+                <h2>Porta Dropbox Business nella tua azienda.</h2>
+            </div>  
+        </section>
+        <!-- FAQ -->
+        <section class="faq small-container center debug">
+            <h2>Domande frequenti</h2>
+        </section>
+    </main>
+
+    <footer class="debug">
+        <div class="container d-flex space-b center debug">
+            <!-- LINK -->
+            <div class="dropbox debug">
+                <h3>Dropbox</h3>
+                <ul>
+                    <li><a>Applicazione desktop</a></li>
+                </ul>
+            </div>
+            <div class="product debug">
+                <h3>Prodotti</h3>
+                <ul>
+                    <li><a>Applicazione desktop</a></li>
+                </ul>
+            </div>
+            <div class="agency debug">
+                <h3>Azienda</h3>
+                <ul>
+                    <li><a>Applicazione desktop</a></li>
+                </ul>
+            </div>
+            <div class="support debug">
+                <h3>Supporto</h3>
+                <ul>
+                    <li><a>Applicazione desktop</a></li>
+                </ul>
+            </div>
+            <div class="community debug">
+                <h3>Community</h3>
+                <ul>
+                    <li><a>Applicazione desktop</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 
 </html>
