--- a/index.html
+++ b/index.html
@@ -15,11 +15,23 @@
 <body>
     <header class="fixed debug">
         <nav class="d-flex space-b">
-            <div class="h-left debug">
-                LOGO & MENU
+            <div class="h-left d-flex debug">
+                <img class="p-20left" src="./img/logo-small.png" alt="logo">
+                <ul class="menu d-flex">
+                    <li class="p-20left"><a href="#">Perchè Dropbox</a></li>
+                    <li class="p-20left"><a href="#">Funzioni</a></li>
+                    <li class="p-20left"><a href="#">Piani e Prezzi</a></li>
+                </ul>
             </div>
-            <div class="h-right debug">
-                SUPPORTO E LOGIN
+            <div class="h-right d-flex debug">
+                <ul class="support-nav d-flex">
+                    <li class="p-20left"><a href="#">Supporto</a></li>
+                    <li class="p-20left"><a href="#">Contatta l'ufficio vendite</a></li>
+                </ul>
+                <div class="userlog p-20left">
+                    <a class="button-login" href="#">Accedi</a>
+                    <a class="button" href="#">Inizia</a>
+                </div>
             </div>
         </nav>
     </header>
