--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
     <main>
         <!-- HERO -->
         <section class="hero-section debug">
-            <div class="hero container center debug">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <h1 class="container m-50top">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <div class="hero container d-flex center debug">    
+                <div class="p-hero d-flex m-50top debug">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <a href="#" class="button">Inizia la tua prova gratuita</a>
+                    <a href="#" class="button-cancel"> Annulla in qualsiasi momento</a>
+                    <a class="scroll-to p-20left m-50top" href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                </div>
+                <div class="img-hero m-50top debug">
+                    <img src="./img/jumbo.png" alt="hero">
+                </div>
             </div>
         </section>
         <!-- PLANS -->
