--- a/index.html
+++ b/index.html
@@ -54,7 +54,43 @@
         </section>
         <!-- PLANS -->
         <section class="plans small-container center debug">
-            <h2>Trova il paino business che fa per te</h2>
+            <h2 class="title-section m-50top">Trova il piano business che fa per te</h2>
+            <form class="m-50top" action="#" class="billingtype">
+                <input type="radio" name="billing_type" value="Fatturazione mensile"> Fatturazione mensile
+                <input class="billing-year" type="radio" name="billing_type" value="Fatturazione annuale"> Fatturazione annuale
+            </form>
+            <!-- CARD-BOX -->
+            <div class="card-container m-50top d-flex debug">
+                <!-- CARD PROFESSIONAL -->
+                <div class="cardbox">
+                    <div class="card-head">
+                        <span class="plan-type"><i class="fa-solid fa-user"></i> Singolo</span>
+                    </div>
+                    <div class="card-content d-flex debug">
+                        <div class="price debug">
+                            <h3>Professional</h3>
+                            <h5>&euro; 12.00</h5>
+                            <span class="more">/mese</span>
+                        </div>
+                        <ul class="functionality d-flex debug">
+                            <li>1 utente</li>
+                            <li>5 TB di spazio di archiviazione</li>
+                            <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                        </ul>
+                        <a class="button trial debug" href="#">Prova gratis per 30 giorni</a>
+                        <a class="buynow debug" href="#"> Oppure acquista ora</a>
+                        <hr>
+                        <div class="highlights debug">
+                            <h4>Punti Salienti del piano</h4>
+                            <ul class= "debug">
+                                <li>Invia file fino a 100gb con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </section>
         <!-- PARTNER -->
         <section class="partner small-container center debug">
