section-plans-complete

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="card-content d-flex debug">
                             <div class="price debug">
-                                <h3>Enterprice</h3>
+                                <h3>Enterprise</h3>
                                 <h5>Contattaci</h5>
                                 <span class="more">-</span>
                             </div>
@@ -158,11 +158,19 @@
                     </div>
                 </div>
             </div>
+
             <!-- CARD TEAM/ENTERPRISE -->
             <div class="card-head m-50top debug">
                 <span class="plan-type"><i class="fa-solid fa-hotel"></i> Team</span>
             </div>
+            <div class="enterprise-info debug">
+                <h3>Enterprise</h3>
+                <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                <p class="m-50top">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su<br> qualsiasi scala.</p>
+                <a href="#" class="button bttn-contact">Contatta l'ufficio vendite</a>
+            </div>
         </section>
+        
         <!-- PARTNER -->
         <section class="partner small-container center debug">
             <h3>Entra in contatto con un partner Dropbox</h3>
