add-section-partner

--- a/index.html
+++ b/index.html
@@ -170,11 +170,19 @@
                 <a href="#" class="button bttn-contact">Contatta l'ufficio vendite</a>
             </div>
         </section>
-        
+
         <!-- PARTNER -->
-        <section class="partner small-container center debug">
-            <h3>Entra in contatto con un partner Dropbox</h3>
+        <section class="partner small-container d-flex center p-100top debug">
+            <div class="photo-box debug">
+                <img src="./img/partner.png" alt="">
+            </div>
+            <div class="article debug">
+                <h3>Entra in contatto con un partner Dropbox</h3>
+                <p class="article-text">Trova un partener Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <a class="button bttn-partner" href="#">Trova un partner</a>
+            </div>   
         </section>
+
         <!-- FEATURES -->
         <section class="features small-container center debug">
             <h2>Esegui più operazione con Dropbox Business</h2>
