add-section-features

--- a/index.html
+++ b/index.html
@@ -184,10 +184,44 @@
         </section>
 
         <!-- FEATURES -->
-        <section class="features small-container center debug">
-            <h2>Esegui più operazione con Dropbox Business</h2>
-            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+        <section class="features small-container center p-100top debug">
+            <h2 class="title-section">Esegui più operazione con Dropbox Business</h2>
+            <div class="features-container d-flex debug">
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-switching-tools.png" alt="switching-tools">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-send-files-it.png" alt="sendfiles">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-coordinate-it.png" alt="coordinate">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-integrations-it.png" alt="integrations">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-multi-device.png" alt="multidevice">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>
+                <article class="f-article d-flex debug">
+                    <img src="./img/business-feature-security.png" alt="security">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </article>    
+            </div>
+            <h2 class="title-section p-100top m-50bottom">Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a class="more-info" href="#">Scopri di più sui nostri clienti</a>
         </section>
+        
         <!-- CUSTOMERS -->
         <section class="customers small-container center debug">
             <div class="box-customers debug">
