add-section-customers

--- a/index.html
+++ b/index.html
@@ -221,14 +221,60 @@
             <h2 class="title-section p-100top m-50bottom">Più di 500.000 team utilizzano Dropbox Business</h2>
             <a class="more-info" href="#">Scopri di più sui nostri clienti</a>
         </section>
-        
+
         <!-- CUSTOMERS -->
-        <section class="customers small-container center debug">
-            <div class="box-customers debug">
-                Quadrati con loghi
-                <h2>Porta Dropbox Business nella tua azienda.</h2>
-            </div>  
+        <section class="customers p-100top debug">
+            <div class="customers-container d-flex debug">
+                <!-- BOX-LEFT -->
+                <div class="boxlogo left d-flex debug">
+                    <div class="square brand1 debug">
+                        <img src="./img/designit.svg" alt="designit">
+                    </div>
+                    <div class="square brand2 debug">
+                        <img src="./img/arizona_state_university.svg" alt="asu">
+                    </div>
+                    <div class="square brand3 debug">
+                        <img src="./img/university_of_florida.svg" alt="uf">
+                    </div>
+                    <div class="square brand4 debug">
+                        <img src="./img/topps.svg" alt="topps">
+                    </div>
+                </div>
+                <!-- BOX-MIDDLE -->
+                <div class="boxlogo middlebrand debug">
+                    <img src="./img/designit-black.svg" alt="designit">
+                    <hr class="m-50top">
+                    <p class="m-50top">"I membri del nostro team lavorano costantemente in Paesi, susi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessa è facile quanto Dropbox Paper."</p>
+                    <span class="credits m-50top">Morten Thomsen, Global IT Lead</span>
+
+                </div>
+                <!-- BOX-RIGHT -->
+                <div class="boxlogo right d-flex debug">
+                    <div class="square brand5 debug">
+                        <img src="./img/world_bicycle_relief.svg" alt="world_bicycle_relief">
+                    </div>
+                    <div class="square brand6 debug">
+                        <img src="./img/hearst_corp.svg" alt="hearst_corp">
+                    </div>
+                    <div class="square brand7 debug">
+                        <img src="./img/lonely_planet.svg" alt="lonely_planet">
+                    </div>
+                    <div class="square brand8 debug">
+                        <img src="./img/clear_channel.svg" alt="clear_channel">
+                    </div>
+                </div>
+            </div>
+            <!-- BANNER-TRIAL -->
+            <div class="banner debug">
+                <div class="box-trial d-flex small-container center debug">  
+                    <h2 class="title-section debug">Porta Dropbox Business nella<br> tua azienda.</h2>
+                    <div class="button-container">
+                        <a class="bttn-trial" href="#">Inizia la tua prova gratuita</a>
+                    </div>
+                </div>
+            </div>
         </section>
+        
         <!-- FAQ -->
         <section class="faq small-container center debug">
             <h2>Domande frequenti</h2>
