fix-header-position

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="fixed debug">
+    <header class="debug">
         <nav class="d-flex space-b">
             <div class="h-left d-flex debug">
                 <img class="p-20left" src="./img/logo-small.png" alt="logo">
@@ -277,7 +277,7 @@
         
         <!-- FAQ -->
         <section class="faq small-container center debug">
-            <h2>Domande frequenti</h2>
+            <h2 class="title-section">Domande frequenti</h2>
         </section>
     </main>
 
