add-section-faq

--- a/index.html
+++ b/index.html
@@ -278,6 +278,28 @@
         <!-- FAQ -->
         <section class="faq small-container center debug">
             <h2 class="title-section">Domande frequenti</h2>
+            <hr class="m-50top hr-faq">
+            <div class="boxfaq">
+                <details>
+                    <summary><strong>Che cos'è Dropbox e come funziona?</strong><span id="arrowf1"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                    <p class="p-20top">Dropbox è un servizio sicuro di archiviazione file basato sul cloud dove poter salvare tutti i tuoi file e accedervi da qualsiasi posizione e tramite qualsiasi dispositivo. È un'area di lavoro per team distribuiti dove poter organizzare i contenuti e accedervi in un unico spazio di lavoro del team. Per altre informazioni, consulta il nostro Centro assistenza.</p>
+                </details>
+            </div>
+            <hr class="hr-faq">
+            <div class="boxfaq">
+                <details>
+                    <summary><strong>Quale piano Dropbox è più adatto alle mie esigenze? Dove posso trovare maggiori informazioni sui piani?</strong><span id="arrowf2"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                    <p class="p-20top">Dropbox offre piani che soddisfano le esigenze di tutti, dagli utenti individuali alle aziende Fortune 500. Scopri qui quale piano offre esattamente ciò di cui hai bisogno.</p>
+                </details>
+            </div>
+            <hr class="hr-faq">
+            <div class="boxfaq">
+                <details>
+                    <summary><strong>Io o le persone con cui condivido i file dobbiamo avere un account per visualizzarli?</strong><span id="arrowf3"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                    <p class="p-20top">Per archiviare e condividere i file è necessario un account, tuttavia chiunque può visualizzare i file condivisi, anche se non possiede un account Dropbox.</p>
+                </details>
+            </div>
+            <hr class="hr-faq">
         </section>
     </main>
 
