--- a/index.html
+++ b/index.html
@@ -303,39 +303,72 @@
         </section>
     </main>
 
-    <footer class="debug">
+    <footer class="p-100top debug">
         <div class="container d-flex space-b center debug">
             <!-- LINK -->
             <div class="dropbox debug">
                 <h3>Dropbox</h3>
-                <ul>
-                    <li><a>Applicazione desktop</a></li>
+                <ul class="list-footer p-20top">
+                    <li><a href="#" class="link">Applicazione desktop</a></li>
+                    <li><a href="#" class="link">Perchè Dropbox</a></li>
+                    <li><a href="#" class="link">Piani</a></li>
+                    <li><a href="#" class="link">Sicurezza</a></li>
+                    <li><a href="#" class="link">Funzioni</a></li>
                 </ul>
             </div>
             <div class="product debug">
                 <h3>Prodotti</h3>
-                <ul>
-                    <li><a>Applicazione desktop</a></li>
+                <ul class="list-footer p-20top">
+                    <li><a href="#" class="link">Applicazione desktop</a></li>
+                    <li><a href="#" class="link">Perchè Dropbox</a></li>
+                    <li><a href="#" class="link">Piani</a></li>
+                    <li><a href="#" class="link">Sicurezza</a></li>
+                    <li><a href="#" class="link">Funzioni</a></li>
                 </ul>
             </div>
             <div class="agency debug">
                 <h3>Azienda</h3>
-                <ul>
-                    <li><a>Applicazione desktop</a></li>
+                <ul class="list-footer p-20top">
+                    <li><a href="#" class="link">Applicazione desktop</a></li>
+                    <li><a href="#" class="link">Perchè Dropbox</a></li>
+                    <li><a href="#" class="link">Piani</a></li>
+                    <li><a href="#" class="link">Sicurezza</a></li>
+                    <li><a href="#" class="link">Funzioni</a></li>
                 </ul>
             </div>
             <div class="support debug">
                 <h3>Supporto</h3>
-                <ul>
-                    <li><a>Applicazione desktop</a></li>
+                <ul class="list-footer p-20top">
+                    <li><a href="#" class="link">Applicazione desktop</a></li>
+                    <li><a href="#" class="link">Perchè Dropbox</a></li>
+                    <li><a href="#" class="link">Piani</a></li>
+                    <li><a href="#" class="link">Sicurezza</a></li>
+                    <li><a href="#" class="link">Funzioni</a></li>
                 </ul>
             </div>
             <div class="community debug">
                 <h3>Community</h3>
-                <ul>
-                    <li><a>Applicazione desktop</a></li>
+                <ul class="list-footer p-20top">
+                    <li><a href="#" class="link">Applicazione desktop</a></li>
+                    <li><a href="#" class="link">Perchè Dropbox</a></li>
+                    <li><a href="#" class="link">Piani</a></li>
+                    <li><a href="#" class="link">Sicurezza</a></li>
+                    <li><a href="#" class="link">Funzioni</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="container center p-100top">
+            <hr>
+        </div>
+        <div class="container language d-flex center">
+            <span><i class="fa-solid fa-earth-europe"></i></span>
+            <select name="language" id="choose-l">
+                <option value="italiano">Italiano</option>
+                <option value="english">English</option>
+                <option value="français">Français</option>
+                <option value="deutsch">Deutsch</option>
+                <option value="中国人">中国人</option>
+            </select>
         </div>
     </footer>
     
