fix-header-scroll-error

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
         <!-- HERO -->
-        <section class="hero-section debug">
+        <section class="hero-section p-100top debug">
             <h1 class="container m-50top">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="hero container d-flex center debug">    
                 <div class="p-hero d-flex m-50top debug">
