update-add-hover-effect

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <div class="h-left d-flex debug">
                 <img class="p-20left" src="./img/logo-small.png" alt="logo">
                 <ul class="menu d-flex">
-                    <li class="p-20left"><a href="#">Perchè Dropbox</a></li>
-                    <li class="p-20left"><a href="#">Funzioni</a></li>
-                    <li class="p-20left"><a href="#">Piani e Prezzi</a></li>
+                    <li class="p-20left"><a class="a-custom" href="#">Perchè Dropbox</a></li>
+                    <li class="p-20left"><a class="a-custom" href="#">Funzioni</a></li>
+                    <li class="p-20left"><a class="a-custom" href="#">Piani e Prezzi</a></li>
                 </ul>
             </div>
             <div class="h-right d-flex debug">
                 <ul class="support-nav d-flex">
-                    <li class="p-20left"><a href="#">Supporto</a></li>
-                    <li class="p-20left"><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li class="p-20left"><a class="a-custom" href="#">Supporto</a></li>
+                    <li class="p-20left"><a class="a-custom" href="#">Contatta l'ufficio vendite</a></li>
                 </ul>
                 <div class="userlog p-20left">
                     <a class="button-login" href="#">Accedi</a>
-                    <a class="button" href="#">Inizia</a>
+                    <a class="button bttn-start" href="#">Inizia</a>
                 </div>
             </div>
         </nav>
