update-add-scroll-behavior

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                     <a href="#" class="button">Inizia la tua prova gratuita</a>
                     <a href="#" class="button-cancel"> Annulla in qualsiasi momento</a>
-                    <a class="scroll-to p-20left m-50top" href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                    <a class="scroll-to p-20left m-50top" href="#the-card"><i class="fa-solid fa-arrow-down"></i></a>
                 </div>
                 <div class="img-hero m-50top debug">
                     <img src="./img/jumbo.png" alt="hero">
@@ -66,7 +66,7 @@
                 <div class="cardbox d-flex">
 
                     <!-- CARD PROFESSIONAL -->
-                    <div class="the-card debug">
+                    <div class="the-card debug"><a name="the-card"></a>
                         <div class="card-head">
                             <span class="plan-type"><i class="fa-solid fa-user"></i> Singolo</span>
                         </div>
